--- a/client/src/locales/bn.json
+++ b/client/src/locales/bn.json
@@ -5,6 +5,7 @@
       "donate": "দান করুন"
     },
     "homepage": {
+      "brand_name": "ভরসা-পে",
       "tagline": "ব্লকচেইন প্রযুক্তি দিয়ে তহবিল সংগ্রহে বিপ্লব",
       "bangladesh_trust": "বাংলাদেশের বিশ্বাস পাওয়ার যোগ্য",
       "we_deliver": "আমরা তা বাস্তবায়ন করি",
