--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -5,6 +5,7 @@
       "donate": "Donate"
     },
     "homepage": {
+      "brand_name": "Bhorsha-Pay",
       "tagline": "Revolutionizing Fundraising with Blockchain Technology",
       "bangladesh_trust": "Bangladesh Deserves Trust",
       "we_deliver": "We Deliver It",
