--- a/client/src/locales/bn.json
+++ b/client/src/locales/bn.json
@@ -25,7 +25,9 @@
       "community_driven": "সম্প্রদায়-চালিত",
       "community_description": "তহবিল সংগ্রহকারী এবং স্রষ্টাদের একটি বিশ্বব্যাপী সম্প্রদায়ে যোগ দিন",
       "transparent": "স্বচ্ছ",
-      "transparent_description": "ব্লকচেইনে প্রতিটি লেনদেন ট্র্যাক করুন"
+      "transparent_description": "ব্লকচেইনে প্রতিটি লেনদেন ট্র্যাক করুন",
+      "relief_in_action": "তৎপরতায় ত্রাণ",
+      "relief_description": "ভরসা-পে হল বাংলাদেশে বন্যা, ঘূর্ণিঝড় এবং মানবিক সংকটের সময় জরুরি তহবিল সংগ্রহের জন্য একটি ব্লকচেইন-ভিত্তিক প্ল্যাটফর্ম। আমরা চিকিৎসা চিকিৎসা, নারী ক্ষমতায়ন, প্রাণী উদ্ধার এবং স্টার্টআপ উন্নয়ন উদ্যোগগুলিও সমর্থন করি। আমাদের প্ল্যাটফর্ম সমস্ত মানবিক কারণের জন্য স্বচ্ছতা, বিশ্বব্যাপী প্রবেশাধিকার এবং তাৎক্ষণিক সমর্থন নিশ্চিত করে। আমাদের উদ্ভাবনী ব্লকচেইন প্রযুক্তির মাধ্যমে, আমরা বিশ্বব্যাপী দাতাদের সরাসরি প্রয়োজনীয়দের সাথে সংযুক্ত করি, মধ্যস্থতাকারীদের বাদ দিয়ে এবং প্রতিটি অবদান তার উদ্দেশ্যপূর্ণ গন্তব্যে পৌঁছায় তা নিশ্চিত করি। প্রতিটি লেনদেন ব্লকচেইনে রেকর্ড করা হয়, সম্পূর্ণ স্বচ্ছতা প্রদান করে এবং দাতা এবং সুবিধাভোগীদের মধ্যে বিশ্বাস গড়ে তোলে, যা ভরসা-পেকে বাংলাদেশে মানবিক সহায়তার জন্য সবচেয়ে নির্ভরযোগ্য প্ল্যাটফর্ম করে তোলে।"
     },
     "header": {
       "search_placeholder": "ক্যাম্পেইন খুঁজুন",
