--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -25,7 +25,9 @@
       "community_driven": "Community Driven",
       "community_description": "Join a global community of funders and creators",
       "transparent": "Transparent",
-      "transparent_description": "Track every transaction on the blockchain"
+      "transparent_description": "Track every transaction on the blockchain",
+      "relief_in_action": "Relief in Action",
+      "relief_description": "Bhorsha-Pay is a blockchain-based platform for emergency fundraising during floods, cyclones, and humanitarian crises in Bangladesh. We also support medical treatment, women empowerment, animal rescue, and startup development initiatives. Our platform ensures transparency, global access, and instant support for all humanitarian causes. Through our innovative blockchain technology, we connect donors worldwide directly to those in need, eliminating intermediaries and ensuring every contribution reaches its intended destination. Every transaction is recorded on the blockchain, providing complete transparency and building trust between donors and beneficiaries, making Bhorsha-Pay the most reliable platform for humanitarian aid in Bangladesh."
     },
     "header": {
       "search_placeholder": "Search for campaigns",
